# cpp-cmake-test

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
core/: CMakeLists.txt
scripts/: build.sh  run_ut.sh
src/: core.cpp  main.cpp  message.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  test.cpp
